Committed by v2rayse.com

--- a/data/v2rayse-live.yaml
+++ b/data/v2rayse-live.yaml
@@ -1,7 +1,7 @@
 ####################################
 # 创建者：v2rayse.com
 # 客户端：Clash.Meta
-# 创建时间：2023-10-09 22:02:48
+# 创建时间：2023-10-10 16:03:15
 # 使用模版：V2RaySE 默认模版
 # 节点数量：10
 ####################################
@@ -86,109 +86,109 @@ dns:
       - 0.0.0.0/32
 
 proxies:
-  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"67.21.90.5","port":443,"cipher":"auto","uuid":"28dd6c26-05a5-4bba-8a5d-052b70ac13b2","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1694429908748","headers":{"host":"www.75409854.xyz"}}}
-  - {"name":"🇺🇸_US_美国->🇫🇷_FR_法国","type":"vless","server":"colonelcy.aurorainiceland.com","port":443,"uuid":"a3f8cad2-e83b-4429-a290-373bec463c7e","tls":true,"servername":"colonelcy.aurorainiceland.com","network":"ws","ws-opts":{"path":"/nimws"}}
-  - {"name":"🇺🇸_US_美国_2","type":"vless","server":"104.24.176.7","port":443,"uuid":"884f9b2c-f0c5-44dd-a68e-3e39ce93bb39","tls":true,"servername":"cf-wkrs-pages-vless-aoy.pages.dev","network":"ws","ws-opts":{"path":"/@v2ray_god = چنل تلگرام🇮🇷@v2ray_god = چنل تلگرام🇮🇷"}}
-  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"cf.yx.alue.link","port":2052,"cipher":"auto","uuid":"fe5edf04-c2af-4ac5-84ee-16d43024decb","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"us.wx.alue.link"}}}
-  - {"name":"🇨🇦_CA_加拿大","type":"trojan","server":"108.181.24.37","port":443,"udp":true,"password":"e0ca72b2-eb7c-4498-b05e-28a3681bacbf","sni":"glc-us1.windowsupdatea.com","skip-cert-verify":true,"network":"tcp"}
-  - {"name":"🇺🇸_US_美国->🇳🇱_NL_荷兰","type":"vmess","server":"45.199.138.152","port":30000,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca4690dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1696598013851"}}
-  - {"name":"🇨🇳_CN_中国->🇺🇸_US_美国_1","type":"trojan","server":"nl01.lovehjq.xyz","port":41929,"udp":true,"password":"09833a6f-4d46-426e-87fe-7793a5489f84","skip-cert-verify":true,"network":"tcp"}
-  - {"name":"🇨🇳_CN_中国->🇺🇸_US_美国_2","type":"trojan","server":"14.18.106.137","port":41929,"udp":true,"password":"09833a6f-4d46-426e-87fe-7793a5489f84","sni":"nl01.lovehjq.xyz","skip-cert-verify":true,"network":"tcp"}
-  - {"name":"🇳🇱_NL_荷兰->🇩🇪_DE_德国","type":"vless","server":"188.114.96.12","port":2053,"uuid":"14406f1c-0f30-47d3-9539-5c1caee06b66","tls":true,"servername":"mtnsihdsidcjhsfidjcpiojsmwdipmk.digikala.network","network":"ws","ws-opts":{"path":"/back"}}
-  - {"name":"🇺🇸_US_美国_4","type":"vmess","server":"ns1.v2-vip.fun","port":8080,"cipher":"auto","uuid":"d3f830a2-205a-4bba-a7ca-5e87899ac04d","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/api/v3/download.getFile","headers":{"host":"ssrsub.v002.ssrsub.com"}}}
+  - {"name":"🇳🇱_NL_荷兰->🇬🇧_GB_英国","type":"vless","server":"188.114.96.2","port":8443,"uuid":"884f9b2c-f0c5-44dd-a68e-3e39ce93bb39","tls":true,"servername":"cf-wkrs-pages-vless-aoy.pages.dev","network":"ws","ws-opts":{"path":"/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/https://zipoapps.com/digitalclock/privacy/tabrizm137/diamond_tm.net"}}
+  - {"name":"🇰🇷_KR_韩国->🇨🇦_CA_加拿大","type":"vmess","server":"130.162.154.209","port":443,"cipher":"auto","uuid":"03fcc618-b93d-6796-6aed-8a38c975d581","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/alvvin.click:443/linkvws","headers":{"host":"cf.tonyluk.link"}}}
+  - {"name":"🇺🇸_US_美国->🇦🇺_AU_澳大利亚","type":"vmess","server":"fd.shabijichang.com","port":80,"cipher":"auto","uuid":"5e48a497-f4ae-4129-afd6-ba26d75b792a","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"mrb.shabijichang.com"}}}
+  - {"name":"🇨🇳_CN_中国->🇦🇹_AT_奥地利","type":"vmess","server":"07.kccic2pa.xyz","port":50007,"cipher":"auto","uuid":"10b5b766-62d6-46cd-9fb6-a80f4d55baf6","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"45.199.138.222","port":30000,"cipher":"auto","uuid":"4ec0ae62-de09-4029-904a-0313d4628ecf","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1696251693048","headers":{"host":"www.19229362.xyz"}}}
+  - {"name":"🇺🇸_US_美国->🇫🇷_FR_法国","type":"vmess","server":"104.18.203.232","port":80,"cipher":"auto","uuid":"6bf1b342-2bf0-4608-b288-8ee515e2d594","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/@hopev2ray،@hopev2ray","headers":{"host":"de1vm.cdn-03.live"}}}
+  - {"name":"🇫🇷_FR_法国","type":"ss","server":"51.158.195.96","port":443,"password":"asdKkaskJKfnsa","cipher":"aes-256-cfb"}
+  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"cf-lt.sharecentre.online","port":8080,"cipher":"auto","uuid":"d3f830a2-205a-4bba-a7ca-5e87899ac04d","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/api/v3/download.getFile","headers":{"host":"ssrsub.v001.ssrsub.com"}}}
+  - {"name":"🇺🇸_US_美国_3","type":"ss","server":"usshs2.gophers.gay","port":20800,"password":"f5d95005-be14-40fc-bedc-e4a1133a5701","cipher":"chacha20-ietf-poly1305"}
+  - {"name":"🇺🇸_US_美国->🇳🇱_NL_荷兰","type":"vmess","server":"45.199.138.191","port":30000,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1696251522438","headers":{"host":"www.42077230.xyz"}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
+      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
+      - 🇰🇷_KR_韩国->🇨🇦_CA_加拿大
+      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+      - 🇨🇳_CN_中国->🇦🇹_AT_奥地利
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大
       - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_4
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
+      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
+      - 🇰🇷_KR_韩国->🇨🇦_CA_加拿大
+      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+      - 🇨🇳_CN_中国->🇦🇹_AT_奥地利
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大
       - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_4
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
+      - 🇰🇷_KR_韩国->🇨🇦_CA_加拿大
+      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+      - 🇨🇳_CN_中国->🇦🇹_AT_奥地利
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大
       - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_4
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
+      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
+      - 🇰🇷_KR_韩国->🇨🇦_CA_加拿大
+      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+      - 🇨🇳_CN_中国->🇦🇹_AT_奥地利
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大
       - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_4
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
+      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
+      - 🇰🇷_KR_韩国->🇨🇦_CA_加拿大
+      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+      - 🇨🇳_CN_中国->🇦🇹_AT_奥地利
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大
       - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_4
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
+      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
+      - 🇰🇷_KR_韩国->🇨🇦_CA_加拿大
+      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+      - 🇨🇳_CN_中国->🇦🇹_AT_奥地利
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大
       - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_4
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -211,16 +211,16 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
+      - 🇰🇷_KR_韩国->🇨🇦_CA_加拿大
+      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+      - 🇨🇳_CN_中国->🇦🇹_AT_奥地利
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大
       - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_4
 
 rules:
 # 本地/局域网地址
